src/rust/dcmfx_cli/tests/snapshots/modify__errors_on_missing_file.snap
---
source: dcmfx_cli/tests/modify.rs
expression: get_stderr(assert)
---
Error: Input file 'file-that-does-not-exist.dcm' does not exist
