src/rust/dcmfx_cli/tests/snapshots/modify__errors_on_omit_file_header_with_in_place.snap
---
source: dcmfx_cli/tests/modify.rs
expression: get_stderr(assert)
---
Error: --omit-file-header can't be used with --in-place, as the result would no longer be a valid DICOM P10 file
