src/rust/dcmfx_cli/tests/snapshots/modify__errors_on_photometric_interpretation_color_without_transfer_syntax.snap
---
source: dcmfx_cli/tests/modify.rs
expression: get_stderr(assert)
snapshot_kind: text
---
The --photometric-interpretation-color option is only valid when --transfer-syntax is specified
Error: ()
