src/rust/dcmfx_cli/tests/snapshots/modify__errors_on_photometric_interpretation_monochrome_without_transfer_syntax.snap
---
source: dcmfx_cli/tests/modify.rs
expression: get_stderr(assert)
snapshot_kind: text
---
Error: The --photometric-interpretation-monochrome option is only valid when --transfer-syntax is specified
