src/rust/dcmfx_cli/tests/snapshots/modify__errors_on_quality_without_transfer_syntax.snap
---
source: dcmfx_cli/tests/modify.rs
expression: get_stderr(assert)
---
Error: The --quality option is only valid when --transfer-syntax is specified
