src/rust/dcmfx_cli/tests/snapshots/modify__errors_on_unaligned_multiframe_bitmap.snap
---
source: dcmfx_cli/tests/modify.rs
expression: get_stderr(assert)
---

-----
Pixel data transcode error modifying "../../../test/assets/pydicom/test_files/liver_nonbyte_aligned.dcm"

  Details: Transcoding multi-frame bitmap pixel data that isn't byte-aligned is not supported
